[package]
name = "health-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive", "env"] }
nix = { version = "0.27.1", features = ["signal"] }
parking_lot = "0.12.1"
pid1 = "0.1.1"
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
