[package]
name = "health-check"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "env"] }
nix = { version = "0.30.1", features = ["signal"] }
parking_lot = "0.12.4"
pid1 = "0.1.5"
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
serde_json = "1.0.140"
signal-hook = "0.3.18"

[profile.release]
panic = 'abort'
strip = "symbols"
opt-level = 'z'
lto = true
codegen-units = 1
